kuard/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard
spec:
  selector:
    app: kuard
  ports:
  - name: http
    port: 80
    targetPort: 8080
