kuard/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kuard
spec:
  to:
    kind: Service
    name: kuard
  port:
    targetPort: 80
